# pnmr-relaxation-analysis

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: summary_results.json  t2_echo_peaks.csv
data/raw/: DS0001A.CSV  README.md  part_a_cursor_measurements.csv  t1_inversion_recovery.csv  t1_zero_crossing.json
notebooks/: 01_pnmr_analysis_showcase.ipynb
report/: PNMR_report_source.tex
scripts/: run_full_analysis.py
src/pnmr_showcase/: __init__.py  cli.py  io.py  models.py  plotting.py  t1.py  t2.py
tests/: test_analysis.py
