[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnmr-analysis-showcase"
version = "0.1.0"
description = "Reproducible pulsed-NMR analysis using Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Hongyu Wang"},
  {name = "Miles Bondoc"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "nbformat>=5.10",
  "nbclient>=0.10",
]

[project.scripts]
pnmr-run = "pnmr_showcase.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
